apps/media/jellyseer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseer
spec:
  selector:
    matchLabels:
      app: jellyseer
  template:
    metadata:
      labels:
        app: jellyseer
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: prowlarr
          image: fallenbagel/jellyseer:latest
          ports:
            - containerPort: 5055
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseer-config
