apps/media/jellyseer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseer
spec:
  selector:
    app: jellyseer
  ports:
    - port: 5055
      targetPort: 5055
