apps/media/jellyseer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer
  labels:
    name: jellyseer
spec:
  rules:
    - host: jellyseer.vkolobara.home
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyseer
                port:
                  number: 5055
